sonarqube/sonbarqube-sts-file.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    meta.helm.sh/release-name: sonarqube
    meta.helm.sh/release-namespace: sonarqube
  creationTimestamp: "2024-05-15T18:34:42Z"
  generation: 11
  labels:
    app: sonarqube
    app.kubernetes.io/component: sonarqube-sonarqube
    app.kubernetes.io/instance: sonarqube
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sonarqube-sonarqube-sonarqube
    app.kubernetes.io/part-of: sonarqube
    app.kubernetes.io/version: 10.5.1-community
    chart: sonarqube-10.5.1_2816
    heritage: Helm
    release: sonarqube
  name: sonarqube-sonarqube
  namespace: sonarqube
  resourceVersion: "2610750"
  uid: faa1d6bd-da30-41a3-ae80-a66baa9ab19d
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sonarqube
      release: sonarqube
  serviceName: sonarqube-sonarqube
  template:
    metadata:
      annotations:
        checksum/config: 1f183e9c25818b7c6539fa41965bb47e2f74305434c75b0fc4116788ce0b4976
        checksum/init-fs: b3bfae1c88d2d894ee311fd12ef40051e7ad9d9943298df84a3eedfe26b36cc6
        checksum/init-sysctl: fc23a0cf68efb0a238a13a18cf062fd0372a54f1ca1c0d070523e65f7dfa47ef
        checksum/plugins: 3240f0709cecd25c32364c2e2c4eb7d10540e8564a3cabb84927a2167ad24bb9
        checksum/secret: 623c450226df9868148b06b421a4b8087013292626e9c5a0af7422e9325a00a5
      creationTimestamp: null
      labels:
        app: sonarqube
        release: sonarqube
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: SONAR_WEB_CONTEXT
          value: /
        - name: SONAR_WEB_JAVAOPTS
        - name: SONAR_CE_JAVAOPTS
        - name: SONAR_HELM_CHART_VERSION
          value: 10.5.1_2816
        - name: SONAR_JDBC_PASSWORD
          valueFrom:
            secretKeyRef:
              key: jdbc-password
              name: sonarqube-sonarqube
        - name: SONAR_WEB_SYSTEMPASSCODE
          valueFrom:
            secretKeyRef:
              key: SONAR_WEB_SYSTEMPASSCODE
              name: sonarqube-sonarqube-monitoring-passcode
        image: sonarqube:10.5.1-community
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - |
              wget --no-proxy --quiet -O /dev/null --timeout=1 --header="X-Sonar-Passcode: $SONAR_WEB_SYSTEMPASSCODE" "http://localhost:9000/api/system/liveness"
          failureThreshold: 6
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: sonarqube
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "#!/bin/bash\n# A Sonarqube container is considered ready if the status
              is UP, DB_MIGRATION_NEEDED or DB_MIGRATION_RUNNING\n# status about migration
              are added to prevent the node to be kill while sonarqube is upgrading
              the database.\nif wget --no-proxy -qO- http://localhost:9000/api/system/status
              | grep -q -e '\"status\":\"UP\"' -e '\"status\":\"DB_MIGRATION_NEEDED\"'
              -e '\"status\":\"DB_MIGRATION_RUNNING\"'; then\n\texit 0\nfi\nexit 1\n"
          failureThreshold: 6
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 800m
            ephemeral-storage: 512G
            memory: 6144M
          requests:
            cpu: 400m
            ephemeral-storage: 1536M
            memory: 2048M
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 0
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 24
          httpGet:
            path: /api/system/status
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/sonarqube/data
          name: sonarqube
          subPath: data
        - mountPath: /opt/sonarqube/extensions
          name: sonarqube
          subPath: extensions
        - mountPath: /opt/sonarqube/temp
          name: sonarqube
          subPath: temp
        - mountPath: /opt/sonarqube/logs
          name: sonarqube
          subPath: logs
        - mountPath: /tmp
          name: tmp-dir
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 0
      serviceAccount: sonarqube-sa
      serviceAccountName: sonarqube-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: init_sysctl.sh
            path: init_sysctl.sh
          name: sonarqube-sonarqube-init-sysctl
        name: init-sysctl
      - configMap:
          defaultMode: 420
          items:
          - key: init_fs.sh
            path: init_fs.sh
          name: sonarqube-sonarqube-init-fs
        name: init-fs
      - configMap:
          defaultMode: 420
          items:
          - key: install_plugins.sh
            path: install_plugins.sh
          name: sonarqube-sonarqube-install-plugins
        name: install-plugins
      - name: sonarqube
        persistentVolumeClaim:
          claimName: sonarqube-sonarqube
      - emptyDir: {}
        name: tmp-dir
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
status:
  availableReplicas: 1
  collisionCount: 0
  currentReplicas: 1
  currentRevision: sonarqube-sonarqube-58cf7b4b6
  observedGeneration: 11
  readyReplicas: 1
  replicas: 1
  updateRevision: sonarqube-sonarqube-58cf7b4b6
  updatedReplicas: 1
