sonarqube/sonar-ingress.yaml

  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: sonarqube
    namespace: sonarqube
  spec:
    ingressClassName: nginx
    rules:
    - host: lucky.application.com
      http:
        paths:
        - backend:
            service:
              name: sonarqube
              port:
                number: 9000
          path: /sonarqube
          pathType: Prefix
